--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "source": [
     "## Task 2b)\n",
-    "![](task2b_binary_train_loss.png)"
+    "![](task2b_binary_train_loss_final.png)"
    ]
   },
   {
@@ -63,15 +63,22 @@
    "metadata": {},
    "source": [
     "## Task 2c)\n",
-    "![](task2b_binary_train_accuracy.png)"
+    "![](task2b_binary_train_accuracy_final.png)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2d)\n",
-    "FILL IN ANSWER"
+    "## Task 2d) - Something is probably wrong\n",
+    "Early stopping kicks inn at epoch 10 with\n",
+    "\n",
+    "| Category                            | Score    |\n",
+    "|-------------------------------------|----------|\n",
+    "| Final Train Cross Entropy Loss      | 0.089585 |\n",
+    "| Final Validation Cross Entropy Loss | 0.088351 |\n",
+    "| Train accuracy                      | 0.96881  |\n",
+    "| Validation accuracy                 | 0.97653  |"
    ]
   },
   {
@@ -80,7 +87,7 @@
    "source": [
     "## Task 2e)\n",
     "FILL IN ANSWER\n",
-    "![](task2e_train_accuracy_shuffle_difference.png)"
+    "![](task2e_train_accuracy_shuffle_difference_final.png)"
    ]
   },
   {
@@ -163,15 +170,15 @@
    "metadata": {},
    "source": [
     "## Task 4e)\n",
-    "FILL IN ANSWER"
+    "FILL IN ANSWER\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.1 64-bit ('py38': conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python38164bitpy38condac1f68ca5407a4349b0d7e37676f2fbb3"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -183,7 +190,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
