--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -30,17 +30,15 @@
    "metadata": {},
    "source": [
     "## task 1a)\n",
-    "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "[](1a.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1a)\n",
-    "\n",
-    "Fill in task 1a image of hand-written notes which are easy to read, or latex equations here"
+    "## task 1b)\n",
+    "[](1b.jpeg)"
    ]
   },
   {
@@ -133,8 +131,7 @@
    "metadata": {},
    "source": [
     "## Task 4a)\n",
-    "\n",
-    "Fill in image of hand-written notes which are easy to read, or latex equations here"
+    "[](4a.jpeg)"
    ]
   },
   {
