--- a/assignment1/AssignmentReport-Group1.ipynb
+++ b/assignment1/AssignmentReport-Group1.ipynb
@@ -11,17 +11,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is an outline for your report to ease the amount of work required to create your report. Jupyter notebook supports markdown, and I recommend you to check out this [cheat sheet](https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet). If you are not familiar with markdown.\n",
-    "\n",
-    "Before delivery, **remember to convert this file to PDF**. You can do it in two ways:\n",
-    "1. Print the webpage (ctrl+P or cmd+P)\n",
-    "2. Export with latex. This is somewhat more difficult, but you'll get somehwat of a \"prettier\" PDF. Go to File -> Download as -> PDF via LaTeX. You might have to install nbconvert and pandoc through conda; `conda install nbconvert pandoc`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Task 1"
    ]
   },
@@ -29,16 +18,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1a)\n",
-    "[](1a.jpeg)"
+    "## Task 1a)\n",
+    "![](1a.jpeg)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## task 1b)\n",
-    "[](1b.jpeg)"
+    "## Task 1b)\n",
+    "![](1b.jpeg)"
    ]
   },
   {
@@ -68,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2d) - Something is probably wrong\n",
+    "## Task 2d)\n",
     "Early stopping kicks inn at epoch 19 with\n",
     "\n",
     "| Category                            | Score   |\n",
@@ -84,7 +73,9 @@
    "metadata": {},
    "source": [
     "## Task 2e)\n",
-    "FILL IN ANSWER\n",
+    "When the images are shuffeled there are no repeted batches and the \"difficult\" images that created the bad results are more evenly spread out on the batches.\n",
+    "\n",
+    "However after the update on the repo that had a non-deterministic import most of the spikes dissapaired\n",
     "![](task2e_train_accuracy_shuffle_difference_final.png)"
    ]
   },
@@ -100,7 +91,7 @@
    "metadata": {},
    "source": [
     "## Task 3b)\n",
-    "![](task3b_softmax_train_loss.png)"
+    "![](task3b_softmax_train_loss_final.png)"
    ]
   },
   {
@@ -108,7 +99,7 @@
    "metadata": {},
    "source": [
     "## Task 3c)\n",
-    "![](task3b_softmax_train_accuracy.png)"
+    "![](task3b_softmax_train_accuracy_final.png)"
    ]
   },
   {
@@ -116,7 +107,9 @@
    "metadata": {},
    "source": [
     "## Task 3d)\n",
-    "FILL IN ANSWER"
+    "There does not seem to be any clear sign of overfitting. A sign that indicates overfitting is if the training accuracy or training loss continues improving while the validation accuracy of loss starts worsening. This is not what we see here.\n",
+    "\n",
+    "However the plot is a bit ambiguos as the validation accuracy is better than the training accuracy. Usually a good model should have quite similar performance on both sets. Typical for overfitting is also that the training performance is significantly better than the validation performance."
    ]
   },
   {
@@ -131,7 +124,8 @@
    "metadata": {},
    "source": [
     "## Task 4a)\n",
-    "[](4a.jpeg)"
+    "The image with calculations should say 4a not 4b.\n",
+    "![](4a.jpeg)"
    ]
   },
   {
@@ -139,9 +133,9 @@
    "metadata": {},
    "source": [
     "## Task 4b)\n",
-    "FILL IN ANSWER\n",
+    "When adding the regulation term with $\\lambda=2$ the weights become more conform and that results in smoother images as shown in the lower row. With $\\lambda=0$ the weights can change more freely and that results in more \"noisy\" weights.\n",
     "\n",
-    "![](task4b_softmax_weight.png)"
+    "![](4b.png)"
    ]
   },
   {
@@ -149,9 +143,7 @@
    "metadata": {},
    "source": [
     "## Task 4c)\n",
-    "FILL IN ANSWER\n",
-    "\n",
-    "![](task4c_l2_reg_accuracy.png)"
+    "![](4c.png)"
    ]
   },
   {
@@ -159,7 +151,7 @@
    "metadata": {},
    "source": [
     "## Task 4d)\n",
-    "![](task4d_l2_reg_norms.png)"
+    "This might be because of our simple model. The reason for regularization is to avoid overfitting. As overfitting does not seem to be a significant concearn in our case the regularization might work against it's intention and therfor worsening the accuracy of the model."
    ]
   },
   {
@@ -167,7 +159,8 @@
    "metadata": {},
    "source": [
     "## Task 4e)\n",
-    "FILL IN ANSWER\n"
+    "The main observation is that when $\\lambda$ is increased the norm of the weights are reduced. As ecpected a large $\\lambda$ will supress the weights more than a low.\n",
+    "![](4d.png)\n"
    ]
   }
  ],
