Finish task 3 and before on assignment 2

--- a/assignment2/AssignmentReport-Group1.ipynb
+++ b/assignment2/AssignmentReport-Group1.ipynb
@@ -52,6 +52,17 @@
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "## Task 2a)\n",
+    "Mean: 33.632\n",
+    "Standard deviation: 78.975"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Task 2c)\n",
@@ -118,7 +129,7 @@
    "metadata": {},
    "source": [
     "## Task 4e)\n",
-    "FILL IN ANSWER"
+    "FILL IN ANSWER\n"
    ]
   }
  ],
